syntax = "proto3";

package property;

import "google/protobuf/struct.proto";

option go_package = "./pkg/pb";

service PropertyService {
  rpc AddProperty(AddPropertyRequest) returns (AddPropertyResponse) {}
  rpc ListProperty(ListPropertyRequest) returns (ListPropertyResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc AddUserPropertyPreference(AddUserPropertyPreferenceRequest) returns (AddUserPropertyPreferenceResponse) {}
  rpc AddUserSavedProperty(AddUserSavedPropertyRequest) returns (AddUserSavedPropertyResponse) {}
  rpc GetUserSavedProperties(GetUserSavedPropertiesRequest) returns (GetUserSavedPropertiesResponse) {}
  rpc HoldProperty(HoldPropertyRequest) returns (HoldPropertyResponse) {}
  rpc SearchProperty(SearchPropertyRequest) returns (SearchPropertyResponse) {}
  rpc GetPropertyCapacity(GetPropertyCapacityRequest) returns (GetPropertyCapacityResponse) {}
  rpc GetAllAvailableLocations(GetAllAvailableLocationsRequest) returns (GetAllAvailableLocationsResponse) {}
  rpc DeleteProperty(DeletePropertyRequest) returns (DeletePropertyResponse) {}
  rpc DeletePropertyHeld(DeletePropertyHeldRequest) returns (DeletePropertyHeldResponse) {}
  rpc DeleteUserPropertyPreference(DeleteUserPropertyPreferenceRequest) returns (DeleteUserPropertyPreferenceResponse) {}
}

message AddPropertyRequest {
  string name = 1;
  int32 property_type = 2;
  string location_text = 3;
  double location_coordinates_lat = 4;
  double location_coordinates_long = 5;
  double rent_price = 6;
  double service_charge_fee = 7;
  double agent_fee = 8;
  double legal_fee = 9;
  int32 rental_deposit_period = 10;
  string description = 11;
  int32 feature_bedrooms = 12;
  int32 feature_bathrooms = 13;
  int32 feature_size = 14;
  string cover_photo = 15;
  google.protobuf.Struct  property_about = 16;
  google.protobuf.Struct property_management = 17;
  repeated PropertyNearbySchool property_nearby_school = 18;
  repeated PropertyNeighbourhood property_neighbourhood = 19;
  repeated PropertyImages property_images = 20;
  string video_preview = 21;
  string lease_terms = 22;
}

message AddPropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
  string id = 4;
}

message Pagination {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 totalPages = 4;
}

message ListPropertyRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListPropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
  Pagination pagination = 4;
  repeated Property properties = 5;
}

// FindOne
message FindOneData {
  string name = 1;
  int32 property_type = 2;
  string property_type_text = 3;
  string property_reference = 4;
  string location_text = 5;
  double location_coordinates_lat = 6;
  double location_coordinates_long = 7;
  double rent_price = 8;
  double service_charge_fee = 9;
  double agent_fee = 10;
  double legal_fee = 11;
  int32 rental_deposit_period = 12;
  string description = 13;
  int32 feature_bedrooms = 14;
  int32 feature_bathrooms = 15;
  int32 feature_size = 16;
  string cover_photo = 17;
  google.protobuf.Struct property_about = 18;
  google.protobuf.Struct property_management = 19;
  repeated PropertyNearbySchool property_nearby_school = 20;
  repeated PropertyNeighbourhood property_neighbourhood = 21;
  repeated PropertyImages property_images = 22;
  string video_preview = 23;
  string property_id = 24;
  bool is_property_available = 25;
  bool is_property_on_hold = 26;
  string property_is_held_by = 27;
  string lease_terms = 28;
}

message FindOneRequest {
  string id = 1;
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
  FindOneData data = 4;
}

message PropertyNearbySchool  {
	string name = 1;
	int64 level = 2;
  string level_text = 3;
	string grades = 4;
	string distance = 5;
	string description = 6;
	string property_id = 7;
}

message PropertyNeighbourhood  {
	string name = 1;
	int64 type = 2;
  string type_text = 3;
	double distance = 4;
	string description = 5;
	string property_id = 6;
}

message PropertyImages  {
	string image = 1;
	string property_id = 2;
}

message Property {
  string name = 1;
  int32 property_type = 2;
  string property_type_text = 3;
  string property_reference = 4;
  string location_text = 5;
  double location_coordinates_lat = 6;
  double location_coordinates_long = 7;
  double rent_price = 8;
  double service_charge_fee = 9;
  double agent_fee = 10;
  double legal_fee = 11;
  int32 rental_deposit_period = 12;
  string description = 13;
  int32 feature_bedrooms = 14;
  int32 feature_bathrooms = 15;
  int32 feature_size = 16;
  string cover_photo = 17;
  google.protobuf.Struct property_about = 18;
  google.protobuf.Struct property_management = 19;
  repeated PropertyNearbySchool property_nearby_school = 20;
  repeated PropertyNeighbourhood property_neighbourhood = 21;
  repeated PropertyImages property_images = 22;
  string video_preview = 23;
  string property_id = 24;
  bool is_property_available = 25;
  bool is_property_on_hold = 26;
  string property_is_held_by = 27;
  string lease_terms = 28;
}

message AddUserPropertyPreferenceRequest {
  int32 room_qty = 1;
  int32 bathroom_qty = 2;
  int32 property_type = 3;
  double minimum_rent = 4;
  double maximum_rent = 5;
  string user_id = 6;
}

message AddUserPropertyPreferenceResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
}

message AddUserSavedPropertyRequest {
  string user_id = 1;
  string property_id = 2;
}

message AddUserSavedPropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
}

message UserSavedProperty {
  string user_id = 1;
  string property_id = 2;
}

message GetUserSavedPropertiesRequest {
  string user_id = 1;
}

message GetUserSavedPropertiesResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
  repeated Property properties = 4;
}


message HoldPropertyRequest {
  string user_id = 1;
  string property_id = 2;
}

message HoldPropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
}

message ReleasePropertyRequest {
  string user_id = 1;
  string property_id = 2;
}


message ReleasePropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
}

message RoommateFilter {
  int32 age = 1;
  bool independent = 2;
  bool smoker = 3;
  bool pet = 4;
  bool student = 5;
  bool employed = 6;
  string music_genre = 7;
  string movie_genre = 8;
  string sport = 9;
  string religion = 10;
  string allergies = 11;
}

message SearchPropertyRequest {
  string user_id = 1;
  int32 property_type = 2;
  int32 feature_bedrooms = 3;
  int32 feature_bathrooms = 4;
  int32 minimumRentPrice= 5;
  int32 maximumRentPrice = 6;
  int32 feature_size = 7;
  string location_text = 8;
  string hostel_room_size = 9;
  string  hostel_resident_gender = 10;
  RoommateFilter roommate_filter = 11;
}

message SearchPropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
  repeated Property properties = 4;
  Property property_suggestion = 5;
}

message GetPropertyCapacityRequest {
  string user_Id = 1;
}

message GetPropertyCapacityResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
  google.protobuf.Struct data =4;
}

message GetAllAvailableLocationsRequest {
}

message Location {
  string name = 1;
  string abbreviation = 2;
  string description = 3;
}

message GetAllAvailableLocationsResponse {
  int32 status = 1;
  string error = 2;
  string message = 3;
  repeated Location locations = 4;
}

message DeletePropertyRequest {
  string user_id = 1;
}

message DeletePropertyResponse {
  int64 status = 1;
  string error = 2;
  string message = 3;
}

message DeletePropertyHeldRequest {
    string user_id = 1;
  }
  
  message DeletePropertyHeldResponse {
    int64 status = 1;
    string error = 2;
    string message = 3;
  }

  message DeleteUserPropertyPreferenceRequest {
    string user_id = 1;
  }
  
  message DeleteUserPropertyPreferenceResponse {
    int64 status = 1;
    string error = 2;
    string message = 3;
  }

